# lmock

./: CMakeLists.txt  HISTORY  Makefile  dist.info  lmock  run_sample.bat  run_test.bat  todo.lua
lib/lua/: lmock.lua  luaunit.lua  mock_env.lua  mock_invoker.lua  mock_method.lua
share/lmock/: README.txt
share/lmock/example/: sample.lua
share/lmock/test/: test_lmock.lua  test_lmock2.lua  test_lmock3.lua  test_lmock4.lua  test_lmock5.lua  test_main.lua  test_mock_invoker.lua  test_mock_method.lua  test_restrict.lua
src/: lmock.lua  mock_method.lua
ut/: test_lmock.lua  test_lmock5.lua  test_mock_method.lua
